06/m06a01cmdline-handout/grading/2023-10-08-19-57-12/compile.err
UniqueArgs.java:14: error: cannot find symbol
        List<String> sortedArgs = new ArrayList<>(uniqueArgs);
        ^
  symbol:   class List
  location: class UniqueArgs
UniqueArgs.java:14: error: cannot find symbol
        List<String> sortedArgs = new ArrayList<>(uniqueArgs);
                                      ^
  symbol:   class ArrayList
  location: class UniqueArgs
2 errors
